--- a/.github/workflows/ci_cd_wf.yml
+++ b/.github/workflows/ci_cd_wf.yml
@@ -11,10 +11,10 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    permissions:
-      pull-requests: write
-      contents: read
-      id-token: write
+#     permissions:
+#       pull-requests: write
+#       contents: read
+#       id-token: write
 
     steps:
       - name: Check out repo code
@@ -33,8 +33,8 @@ jobs:
       - name: Run tests
         run: |
           pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=app tests/ | tee pytest-coverage.txt
-      - name: Pytest coverage comment
-        uses: MishaKav/pytest-coverage-comment@main
-        with:
-          pytest-coverage-path: ./pytest-coverage.txt
-          junitxml-path: ./pytest.xml
+#       - name: Pytest coverage comment
+#         uses: MishaKav/pytest-coverage-comment@main
+#         with:
+#           pytest-coverage-path: ./pytest-coverage.txt
+#           junitxml-path: ./pytest.xml
